logo RFL adicionado

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="timer">
-    <h1>RFL Timer</h1>
+    <img src="./assets/img/logo.svg" alt="RFL Timer" class="timer__logo">
     <div class="timer__counter">00:00:00</div>
     <div class="timer__buttons">
       <button class="button button--start">Start</button>
